--- a/dubbo-service/pom.xml
+++ b/dubbo-service/pom.xml
@@ -166,7 +166,12 @@
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.3.0</version>
         </dependency>
-
+        <!--fastJson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.40</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>dubbo-service</finalName>
