--- a/dubbo-service/pom.xml
+++ b/dubbo-service/pom.xml
@@ -125,10 +125,11 @@
         </dependency>
         <!--oracle驱动-->
         <dependency>
-            <groupId>com.oracle</groupId>
+            <groupId>rewin.ojdbc</groupId>
             <artifactId>ojdbc6</artifactId>
-            <version>11.2.0.3.0</version>
+            <version>11.2.0.3</version>
         </dependency>
+         
         <!--fastJson-->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -150,4 +151,10 @@
             </plugin>
         </plugins>
     </build>
+         <repositories>
+        <repository>
+            <id>rewin</id>
+            <url>http://192.168.25.25:8081/nexus/content/groups/rewin/</url>
+        </repository>
+    </repositories>
 </project>
